<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationActivity">

  <ImageView
      android:id="@+id/imageView3"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:foreground="@drawable/black_bg_gradient"
      android:scaleType="centerCrop"
      android:src="@drawable/bg4" />

  <TextView
      android:id="@+id/textView5"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:fontFamily="@font/lobster"
      android:text="@string/my_restaurant_app"
      android:textAlignment="center"
      android:textColor="@color/white"
      android:textSize="33sp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintTop_toTopOf="@+id/imageView3"
      app:layout_constraintVertical_bias=".2" />

  <TextView
      android:id="@+id/textView6"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:text="@string/register"
      android:textAlignment="center"
      android:textColor="#FBFBFB"
      android:textSize="19sp"
      android:textStyle="bold"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView5" />

  <EditText
      android:id="@+id/editText"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="30dp"
      android:backgroundTint="#CCCCCC"
      android:drawableLeft="@drawable/ic_baseline_person_24"
      android:drawablePadding="13dp"
      android:text="@string/full_name"
      android:textColor="@color/white"
      android:textColorHint="@color/white"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView6"
      app:layout_constraintWidth_percent=".8" />

  <EditText
      android:id="@+id/editText2"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:backgroundTint="#CCCCCC"
      android:drawableLeft="@drawable/ic_baseline_email_24"
      android:drawablePadding="13dp"
      android:text="@string/email_address"
      android:textColor="@color/white"
      android:textColorHint="@color/white"
      android:layout_marginTop="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editText"
      app:layout_constraintWidth_percent=".8" />

  <EditText
      android:id="@+id/editText3"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:backgroundTint="#CCCCCC"
      android:drawableLeft="@drawable/password_key"
      android:drawablePadding="13dp"
      android:text="@string/password"
      android:textColor="@color/white"
      android:textColorHint="@color/white"
      android:layout_marginTop="10dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editText2"
      app:layout_constraintWidth_percent=".8" />

  <Button
      android:id="@+id/button"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:background="@drawable/btn_bg"
      android:onClick="mainActivity"
      android:padding="14dp"
      android:text="Register"
      android:textAllCaps="false"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/editText3"
      app:layout_constraintVertical_bias="0.748"
      app:layout_constraintWidth_percent=".8"
      tools:ignore="MissingConstraints" />

  <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/already_registered"
      android:textAlignment="center"
      android:textColor="#FBFBFB"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="@+id/imageView3"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/button" />

  <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/sign_in"
      android:textAlignment="center"
      android:textColor="@color/purple_500"
      android:textStyle="bold"
      android:onClick="login"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toEndOf="@+id/textView7"
      app:layout_constraintTop_toBottomOf="@+id/button"
      app:layout_constraintHorizontal_bias="0.1"
      tools:ignore="UsingOnClickInXml" />



</androidx.constraintlayout.widget.ConstraintLayout>